fixed the scrollbar mixin

--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -45,19 +45,18 @@
 
 @mixin scrollbar($color) {
     /* width */
-    ::-webkit-scrollbar {
-        width: 10px;
-        height: 10px;
+    &::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
     }
 
     /* Track */
-    ::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 5px grey;
+    &::-webkit-scrollbar-track {
         border-radius: 5px;
     }
 
     /* Handle */
-    ::-webkit-scrollbar-thumb {
+    &::-webkit-scrollbar-thumb {
         background: $color;
         border-radius: 5px;
     }
